--- a/project/src/main/resources/templates/index.html
+++ b/project/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
                 <a class="nav-link page-scroll" href="#services">Services</a>
               </li>  
               <li class="nav-item">
-                <a class="nav-link page-scroll" href="#features">Features</a>
+                <a class="nav-link page-scroll" href="#features">Superiority</a>
               </li>                            
               <li class="nav-item">
                 <a class="nav-link page-scroll" href="#portfolios">Works</a>
@@ -52,16 +52,16 @@
                 <a class="nav-link page-scroll" href="#pricing">Pricing</a>
               </li> 
               <li class="nav-item">
-                <a class="nav-link page-scroll" href="#team">Team</a>
+                <a class="nav-link page-scroll" href="#team">OurTeam</a>
               </li>    
               <li class="nav-item">
                 <a class="nav-link page-scroll" href="#subscribe">Subscribe</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link page-scroll" data-toggle="modal" data-target="#signInModal" href="#">登录</a>
+                <a class="nav-link page-scroll" data-toggle="modal" data-target="#signInModal" href="#">Sing In</a>
               </li> 
               <li class="nav-item">
-                <a class="nav-link page-scroll" data-toggle="modal" data-target="#signUpModal"  href="#">注册</a>
+                <a class="nav-link page-scroll" data-toggle="modal" data-target="#signUpModal"  href="#">Register</a>
               </li> 
             </ul>              
           </div>
@@ -126,7 +126,7 @@
         <div class="section-header">          
           <h2 class="section-title">Our Services</h2>
           <span>Services</span>
-          <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy</p>
+          <p class="section-subtitle">Rich, free and individualized design functions help you build a one-stop product service</p>
         </div>
         <div class="row">
           <div class="col-lg-4 col-md-6 col-xs-12">
@@ -135,7 +135,7 @@
                 <i class="lni-pencil"></i>
               </div>
               <h4>Content Writing</h4>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
+              <p>Custom fonts, colors, and text types provide the most beautiful features for your clothes</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12">
@@ -144,7 +144,7 @@
                 <i class="lni-cog"></i>
               </div>
               <h4>Web Development</h4>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
+              <p>Online design, free from download, easy to learn, practical</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12">
@@ -153,7 +153,7 @@
                 <i class="lni-stats-up"></i>
               </div>
               <h4>Graphic Design</h4>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
+              <p>Choose or upload, always in one way to meet your needs for pictures</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12">
@@ -162,7 +162,7 @@
                 <i class="lni-layers"></i>
               </div>
               <h4>UI/UX Design</h4>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
+              <p>Interface design in line with the trend of the times brings different sensory experience</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12">
@@ -171,7 +171,7 @@
                 <i class="lni-tab"></i>
               </div>
               <h4>App Development</h4>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
+              <p>Mobile, still under development, aims at more convenient services</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12">
@@ -180,7 +180,7 @@
                 <i class="lni-briefcase"></i>
               </div>
               <h4>Digital Marketing</h4>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
+              <p>Perfect support for e-commerce, from design to shopping can provide you with convenience</p>
             </div>
           </div>
         </div>
@@ -195,7 +195,7 @@
           <div class="col-10">
             <div class="cta-trial text-center">
               <h3>Are You Ready To Get Started?</h3>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod<br> Lorem ipsum dolor sit amet, consectetuer</p>
+              <p>From then on, we can free ourselves from the trouble of difficult choices and open up a new experience of design shopping.<br> Click register to start a new experience immediately</p>
               <a href="#" class="btn btn-common btn-effect">Purchase Now!</a>
             </div>
           </div>
@@ -210,7 +210,7 @@
         <div class="section-header">          
           <h2 class="section-title">Why Choose Us</h2>
           <span>Why</span>
-          <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos debitis.</p>
+          <p class="section-subtitle">Reasonable front-end and back-end function design brings platform hardware advantages.</p>
         </div>
         <div class="row">
           <!-- Start featured -->
@@ -222,7 +222,7 @@
               <div class="featured-content">
                 <div class="icon-o"><i class="lni-layout"></i></div>
                 <h4>Refreshing Design</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et magna aliqua.</p>
+                <p>Always adjust your design,show the effect directly,no more waiting.</p>
               </div>
             </div>
           </div>
@@ -236,7 +236,7 @@
               <div class="featured-content">
                 <div class="icon-o"><i class="lni-tab"></i></div>
                 <h4>Fully Responsive</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et magna aliqua.</p>
+                <p>All effects depend directly on your operation, and the design shows full response.</p>
               </div>
             </div>
           </div>
@@ -250,7 +250,7 @@
               <div class="featured-content">
                 <div class="icon-o"><i class="lni-rocket"></i></div>
                 <h4>Fast & Smooth</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et magna aliqua.</p>
+                <p>The control is clear and easy to operate.</p>
               </div>
             </div>
           </div>
@@ -264,7 +264,7 @@
               <div class="featured-content">
                 <div class="icon-o"><i class="lni-database"></i></div>
                 <h4>SEO Optimized</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et magna aliqua.</p>
+                <p>Reasonable layout structure helps you get a better experience in filtering.</p>
               </div>
             </div>
           </div>
@@ -278,7 +278,7 @@
               <div class="featured-content">
                 <div class="icon-o"><i class="lni-leaf"></i></div>
                 <h4>Clean Code</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et magna aliqua.</p>
+                <p>Focus on front-end code to make back-end content simple and clear.</p>
               </div>
             </div>
           </div>
@@ -291,8 +291,8 @@
               </div>
               <div class="featured-content">
                 <div class="icon-o"><i class="lni-pencil"></i></div>
-                <h4>Free 24/7 Support</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et magna aliqua.</p>
+                <h4>Free Support</h4>
+                <p>Provide personalized product recommendations to guess your style.</p>
               </div>
             </div>
           </div>
@@ -326,7 +326,7 @@
         <div class="section-header">          
           <h2 class="section-title">Our Works</h2>
           <span>Works</span>
-          <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos debitis.</p>
+          <p class="section-subtitle">Experience customized designs by users.</p>
         </div>
         <div class="row">          
           <div class="col-md-12">
@@ -465,7 +465,7 @@
         <div class="section-header">          
           <h2 class="section-title">Pricing Plans</h2>
           <span>Pricing</span>
-          <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos debitis.</p>
+          <p class="section-subtitle">Provide richer value-added services here.</p>
         </div>
 
         <div class="row pricing-tables">
@@ -502,7 +502,7 @@
                 </ul>
               </div>
               <div class="plan-button">
-                <a href="#" class="btn btn-common btn-effect">Buy Now</a>
+                <a href="#" class="btn btn-common btn-effect">Get Plan</a>
               </div>
             </div>
           </div>
@@ -521,7 +521,7 @@
                 </ul>
               </div>
               <div class="plan-button">
-                <a href="#" class="btn btn-common btn-effect">Buy Now</a>
+                <a href="#" class="btn btn-common btn-effect">Ger plan</a>
               </div>
             </div>
           </div>
@@ -552,8 +552,8 @@
                 <i class="lni-coffee-cup"></i>
               </div>                
               <div class="fact-count">
-                <h3><span class="counter">700</span></h3>
-                <h4>Cup of Coffee</h4>
+                <h3><span class="counter">300+</span></h3>
+                <h4>Material Provided</h4>
               </div>
             </div>
           </div>
@@ -564,7 +564,7 @@
               </div>                
               <div class="fact-count">
                 <h3><span class="counter">10000</span>+</h3>
-                <h4>Active Clients</h4>
+                <h4>Server-supported Users</h4>
               </div>
             </div>
           </div>
@@ -598,11 +598,11 @@
                     </div>
                     <div class="author-info">
                       <h2><a href="#">Johnathan Doe</a></h2>
-                      <span>Marketing Head Matrix media</span>
+                      <span>A silly man</span>
                     </div>
                   </div>
                   <div class="content-inner">
-                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quidem, excepturi facere magnam illum, at accusantium doloremque odio.</p>
+                    <p class="description">The design didn't meet my expectations. It worked well but I didn't like it very much.</p>
                     <span><i class="lni-star-filled"></i></span>
                     <span><i class="lni-star-filled"></i></span>
                     <span><i class="lni-star-filled"></i></span>
@@ -623,7 +623,7 @@
                     </div>
                   </div>
                   <div class="content-inner">
-                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quidem, excepturi facere magnam illum, at accusantium doloremque odio.</p>
+                    <p class="description">The system design is very novel and interesting, and can provide considerable convenience, but the operation is slightly rough, there are still some improvements.</p>
                     <span><i class="lni-star-filled"></i></span>
                     <span><i class="lni-star-filled"></i></span>
                     <span><i class="lni-star-filled"></i></span>
@@ -712,7 +712,7 @@
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-xs-12 text-right">
-            <a href="#" class="btn btn-border">Download</a>
+            <a href="#" class="btn btn-border">View Course</a>
           </div>
         </div>
       </div>
@@ -725,7 +725,7 @@
         <div class="section-header">          
           <h2 class="section-title">Our Team</h2>
           <span>Team</span>
-          <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos debitis.</p>
+          <p class="section-subtitle">Honest people who work steadfastly</p>
         </div>
         <div class="row">
           <div class="col-lg-3 col-md-6 col-xs-12">
@@ -733,8 +733,8 @@
               <img src="../static/img/team/team1.png" alt="">
               <div class="team-details">
                 <div class="team-inner">
-                  <h4 class="team-title">Jhon Doe</h4>
-                  <p>Chief Technical Officer</p>
+                  <h4 class="team-title">Shi Liu</h4>
+                  <p>Front End Engineer</p>
                   <ul class="social-list">
                     <li class="facebook"><a href="#"><i class="lni-facebook-filled"></i></a></li>
                     <li class="twitter"><a href="#"><i class="lni-twitter-filled"></i></a></li>
@@ -750,8 +750,8 @@
               <img src="../static/img/team/team2.png" alt="">
               <div class="team-details">
                 <div class="team-inner">
-                  <h4 class="team-title">Luke Chesser</h4>
-                  <p>Marketing Executive</p>
+                  <h4 class="team-title">Huiqing Huang</h4>
+                  <p>Backend Engineer</p>
                   <ul class="social-list">
                     <li class="facebook"><a href="#"><i class="lni-facebook-filled"></i></a></li>
                     <li class="twitter"><a href="#"><i class="lni-twitter-filled"></i></a></li>
@@ -767,8 +767,8 @@
               <img src="../static/img/team/team3.png" alt="">
               <div class="team-details">
                 <div class="team-inner">                  
-                  <h4 class="team-title">David Givens</h4>
-                  <p>Business Manager</p>
+                  <h4 class="team-title">Zheng Gong</h4>
+                  <p>Project designer</p>
                   <ul class="social-list">
                     <li class="facebook"><a href="#"><i class="lni-facebook-filled"></i></a></li>
                     <li class="twitter"><a href="#"><i class="lni-twitter-filled"></i></a></li>
@@ -784,8 +784,8 @@
               <img src="../static/img/team/team4.png" alt="">
               <div class="team-details">
                 <div class="team-inner">
-                  <h4 class="team-title">Annie Spratt</h4>
-                  <p>Graphic Designer</p>
+                  <h4 class="team-title">Lan Wu</h4>
+                  <p>Backend Designer</p>
                   <ul class="social-list">
                     <li class="facebook"><a href="#"><i class="lni-facebook-filled"></i></a></li>
                     <li class="twitter"><a href="#"><i class="lni-twitter-filled"></i></a></li>
@@ -846,7 +846,7 @@
               </div>
               <div class="text-box">
                 <h4>Weekly Free Learning Materials</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, laborum libero beatae obcaecati.</p>
+                <p>The project will be officially launched on-line on September 9, 2019.</p>
               </div>
             </div>
             <div class="sub-item-box">
@@ -855,7 +855,7 @@
               </div>
               <div class="text-box">
                 <h4>Free PDF to Get Started</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, laborum libero beatae obcaecati.</p>
+                <p>View detailed text and video tutorials for website content learning.</p>
               </div>
             </div>
             <div class="sub-item-box">
@@ -864,7 +864,7 @@
               </div>
               <div class="text-box">
                 <h4>10% Instant Discount</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, laborum libero beatae obcaecati.</p>
+                <p>Subscription during the testing period can provide considerable benefits and benefits.</p>
               </div>
             </div>
           </div>
@@ -880,7 +880,7 @@
         <div class="section-header">          
           <h2 class="section-title">Blogs</h2>
           <span>Blogs</span>
-          <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos debitis.</p>
+          <p class="section-subtitle">View previous user releases of dynamic content</p>
         </div>
         <div class="row">
           <div class="col-lg-4 col-md-6 col-xs-12 blog-item">
@@ -986,7 +986,7 @@
           <div class="section-header">          
             <h2 class="section-title">Get In Touch</h2>
             <span>Contact</span>
-            <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos debitis.</p>
+            <p class="section-subtitle">We sincerely thank you for your comments and suggestions.</p>
           </div>
           <div class="row">          
             <div class="col-lg-9 col-md-9 col-xs-12">
@@ -1033,7 +1033,7 @@
                   <div class="contact-info">
                     <i class="lni-map"></i>
                     <h5>Location</h5>
-                    <p>1900 Pico Blvd, New York br Centernial, colorado</p>
+                    <p>湖南省长沙市中南大学铁道学院</p>
                   </div>
                   <!-- Content Info -->
                   <div class="contact-info">
@@ -1045,7 +1045,7 @@
                   <div class="contact-info">
                     <i class="lni-phone"></i>
                     <h5>Phone</h5>
-                    <p>+48 123 456 789</p>
+                    <p>+123456789</p>
                   </div>
                   <!-- Icon -->
                   <ul class="footer-social">
@@ -1113,10 +1113,10 @@
                 <h3 class="block-title">Contact Us</h3>
                 <ul class="contact-footer">
                   <li>
-                    <strong>Address :</strong> <span>1900 Pico Blvd, New York br Centernial, colorado</span>
+                    <strong>Address :</strong> <span>湖南省长沙市中南大学铁道学院</span>
                   </li>
                   <li>
-                    <strong>Phone :</strong> <span>+48 123 456 789</span>
+                    <strong>Phone :</strong> <span>+123456789</span>
                   </li>
                   <li>
                     <strong>E-mail :</strong> <span><a href="#">info@example.com</a></span>
