--- a/project/src/main/resources/templates/information.html
+++ b/project/src/main/resources/templates/information.html
@@ -8,66 +8,82 @@
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
     <script src="../static/js/jquery-3.3.1.slim.min.js"></script>
-    <script>window.jQuery || document.write('<script src="/js/jquery-slim.min.js"><\/script>')</script>
-    <script src="/js/feather.min.js"></script>
-    <script src="/js/Chart.min.js"></script>
-    <script src="/js/user-info.js"></script>
+    <script src="../static/js/jquery-min.js"></script>
+    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/css/line-icons.css">
+    <link rel="stylesheet" href="../static/css/owl.carousel.css">
+    <link rel="stylesheet" href="../static/css/owl.theme.css">
+    <link rel="stylesheet" href="../static/css/nivo-lightbox.css">
+    <link rel="stylesheet" href="../static/css/magnific-popup.css">
+    <link rel="stylesheet" href="../static/css/animate.css">
+    <link rel="stylesheet" href="../static/css/color-switcher.css">
+    <link rel="stylesheet" href="../static/css/menu_sideslide.css">
+    <link rel="stylesheet" href="../static/css/main.css">
+    <link rel="stylesheet" href="../static/css/responsive.css">
+    <link rel="stylesheet" href="../static/css/font-awesome.css">
+    <script>window.jQuery || document.write('<script src="../static/js/jquery-slim.min.js"><\/script>')</script>
+    <script src="../static/js/bootstrap.bundle.js"></script>
     <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
     <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-sm bg-dark ">
+    <nav class="navbar navbar-expand-sm">
         <div class="container">
-            <!-- Brand -->
-            <a class="navbar-brand" href="../templates/index.html"></a>
-            <!-- Dropdown -->
-            <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                        Products
-                    </a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">T-Shirts</a>
-                        <a class="dropdown-item" href="#">Pants/a>
+            <div class="col-md-2">
+                <a class="navbar-brand" href="../templates/index.html"></a>
+            </div>
+            <div class="col-md-7">
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown data-hover">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-hover="dropdown"
+                            data-toggle="dropdown" id="dropdownMenu1">
+                            Products
+                        </a>
+                        <div class="dropdown-menu hover" aria-labelledby="dropdownMenu1">
+                            <a class="dropdown-item" href="#">T-Shirts</a>
+                            <a class="dropdown-item" href="#">Pants</a>
                             <a class="dropdown-item" href="#">Shorts</a>
                             <a class="dropdown-item" href="#">Shirts</a>
-                            <a class="dropdown-item" href="#">Jeans/a>
-                                <a class="dropdown-item" href="#">Others</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown">
+                            <a class="dropdown-item" href="#">Jeans</a>
+                            <a class="dropdown-item" href="#">Others</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                            Designs
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Link 1</a>
+                            <a class="dropdown-item" href="#">Link 2</a>
+                            <a class="dropdown-item" href="#">Link 3</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                            Service
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Link 1</a>
+                            <a class="dropdown-item" href="#">Link 2</a>
+                            <a class="dropdown-item" href="#">Link 3</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-3">
+                <ul class="nav nav-item dropdown navbar-right">
                     <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                        Designs
+                        PersonalCenter
                     </a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Link 1</a>
-                        <a class="dropdown-item" href="#">Link 2</a>
-                        <a class="dropdown-item" href="#">Link 3</a>
+                        <a href="#" class="dropdown-item">My Information</a>
+                        <a href="#" class="dropdown-item">My Cart</a>
+                        <a href="#" class="dropdown-item">Sign out</a>
                     </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                        Service
-                    </a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Link 1</a>
-                        <a class="dropdown-item" href="#">Link 2</a>
-                        <a class="dropdown-item" href="#">Link 3</a>
-                    </div>
-                </li>
-            </ul>
-            <ul class="nav nav-item dropdown navbar-right">
-                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                    PersonalCenter
-                </a>
-                <div class="dropdown-menu">
-                    <a href="#" class="dropdown-item">My Information</a>
-                    <a href="#" class="dropdown-item">My Cart</a>
-                    <a href="#" class="dropdown-item">Sign out</a>
-                </div>
-            </ul>
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -150,51 +166,40 @@
                     </ul>
                 </div>
             </nav>
-            <!-- 
 
-                <div class="row">
-                    <div class="col-md-2">
-                        <div class="list-group side-bar-card">
-                            <div class="card-title">站点内容</div>
-                            <div class="card-body">
-                                <div class="list">
-                                    <div class="item">
-                                        <a href="#" class="title">Information</a>
-                                    </div>
-                                    <div class="item">
-                                        <a href="#" class="title">MyCart</a>
-                                    </div>
-                                    <div class="item">
-                                        <a href="#" class="title">MyDesign</a>
-                                    </div>
+            <div class="col-md-5 d-none d-md-block">
+                <div class="container">
+                    <h1 class="mx-auto" style="width:150px">Information</h1>
+                    <h3>Basics</h3>
+                        <div class="container">
+                            <div class="col-xs-2">
+                                <div class="margin">
+                                    <li>
+                                        <img src="../static/images/head_picture/head_picture-01.jpg" width="75"
+                                            height="75" border-ridus="50%">
+                                        用户名：Ameame
+
+                                    </li>
+                                </div>
+                            </br>
+                                <div class="form-group">
+                                    <label for="petname">Petname</label>
+                                    <input type="text" class="form-control" id="petname"
+                                        placeholder="Enter Your Petname">
+                                </div>
+                                <div class="form-group">
+                                    <label for="pws">Password:</label>
+                                    <input type="password" class="form-control" id="pwd"
+                                        placeholder="Enter Your Password">
+                                </div>
+                                <div class="form-group">
+                                    <label for="email">Email:</label>
+                                    <input type="email" class="form-control" id="email" placeholder="Enter Your Email">
                                 </div>
                             </div>
                         </div>
-                    </div> -->
-            <div class="col-md-5">
-                <div class="container">
-                    <h1 class="mx-auto" style="width:150px">Information</h1>
-                    <h3>Base Information</h2>
-                        <div class="col-xs-2">
-                            <div class="margin">
-                                <li>
-                                    <img src="../static/images/head_picture/head_picture-01.jpg" class="rounded"
-                                        alt="Cinque Terre" width="50" height="50">
-                                    用户名：Ameame</li>
-                            </div>
-                            <div class="form-group">
-                                <label for="petname">Petname</label>
-                                <input type="text" class="form-control" id="petname" placeholder="Enter Your Petname">
-                            </div>
-                            <div class="form-group">
-                                <label for="pws">Password:</label>
-                                <input type="password" class="form-control" id="pwd" placeholder="Enter Your Password">
-                            </div>
-                            <div class="form-group">
-                                <label for="email">Email:</label>
-                                <input type="email" class="form-control" id="email" placeholder="Enter Your Email">
-                            </div>
-                            <h3>Detailed Information</h3>
+                        <h3>Detailes</h3>
+                        <div class="container">
                             <div class="form-group">
                                 <label for="First Name">First Name:</label>
                                 <input type="text" class="form-control" id="first name"
@@ -226,29 +231,30 @@
                                 <label for="City">City:</label>
                                 <input type="text" class="form-control" id="city" placeholder="Enter Your City">
                             </div>
-
-                            <button type="button" class="mx-auto">Save</button>
-                            <button type="reset" class="mx-auto">Reset</button>
                         </div>
+
+                        <button class="button">Save</button>
+                        <button type="reset" class="button">Reset</button>
                 </div>
             </div>
 
-            <div class="col-sm-5">
+
+            <div class="col-sm-5 d-none d-md-block">
                 <div class="container">
                     <h1 class="mx-right">Personal Dynamics</h1>
 
                     <div class="side-bar-card flag clearfix">
-                        <h3>Publishing Dynamics</h3>
+                        <h3>Publishing</h3>
                         <div class="col-xs-8">
                             <input type="text" class="form-control" placeholder="Write Down Your Dynamic">
                         </div>
                         <div class="col-xs-4">
-                            <button type="submit" class="">Submit</button>
+                            <button type="submit" class="right">Submit</button>
                             <button type="reset">Reset</button>
                         </div>
                     </div>
                     <div class="side-bar-card">
-                        <div class="card-title">Past Dynamics</div>
+                        <div class="card-title">The Past</div>
                         <div class="card-body">
                             <div class="list">
                                 <div class="item">
@@ -272,15 +278,84 @@
                     <div class="side-bar-card">
                         <div class="contianer">
                             <h3>Guess You Like</h3>
+                            <button>123</button>
+                            <button>123</button>
+                            <button>123</button>
+
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
+        <section class="footer-Content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
+                        <h3>Essence</h3>
+                        <div class="textwidget">
+                            <p>If you think you have the passion,
+                                attitude and capability to join us
+                                the next big software company
+                                s so that we can get the convers.</p>
+                        </div>
+                        <ul class="footer-social">
+                            <li><a class="facebook" href="#"><i class="lni-facebook-filled"></i></a></li>
+                            <li><a class="twitter" href="#"><i class="lni-twitter-filled"></i></a></li>
+                            <li><a class="linkedin" href="#"><i class="lni-linkedin-fill"></i></a></li>
+                            <li><a class="google-plus" href="#"><i class="lni-google-plus"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
+                        <div class="widget">
+                            <h3 class="block-title">Short Link</h3>
+                            <ul class="menu">
+                                <li><a href="#">Service</a></li>
+                                <li><a href="#">Wishlist</a></li>
+                                <li><a href="#">FAQ</a></li>
+                                <li><a href="#">Advance Sarch</a></li>
+                                <li><a href="#">Site Map</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
+                        <div class="widget">
+                            <h3 class="block-title">Contact Us</h3>
+                            <ul class="contact-footer">
+                                <li>
+                                    <strong>Address :</strong> <span>湖南省长沙市中南大学铁道学院</span>
+                                </li>
+                                <li>
+                                    <strong>Phone :</strong> <span>+123456789</span>
+                                </li>
+                                <li>
+                                    <strong>E-mail :</strong> <span><a href="#">info@example.com</a></span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
+                        <div class="widget">
+                            <h3 class="block-title">Instagram</h3>
+                            <ul class="instagram-footer">
+                                <li><a href="#"><img src="../static/img/instagram/insta1.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="../static/img/instagram/insta2.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="../static/img/instagram/insta3.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="../static/img/instagram/insta4.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="../static/img/instagram/insta5.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="../static/img/instagram/insta6.jpg" alt=""></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
-    </div>
-
+    <script src="../static/js/jquery-3.3.1.slim.min.js"></script>
+    <script>window.jQuery || document.write('<script src="../static/js/jquery-slim.min.js"><\/script>')</script>
+    <script src="../static/js/bootstrap.bundle.js"></script>
+    <script src="../static/js/feather.min.js"></script>
+    <script src="../static/js/Chart.min.js"></script>
+    <script src="../static/js/user-info.js"></script>
 </body>
 
 </html>
