--- a/project/src/main/resources/templates/user-info.html
+++ b/project/src/main/resources/templates/user-info.html
@@ -42,7 +42,7 @@
   </ul>
 </nav>
 
-<div class="container-fluid">
+<div class="container">
   <div class="row">
     <nav class="col-md-2 d-none d-md-block bg-light sidebar">
       <div class="sidebar-sticky">
@@ -268,9 +268,9 @@
     </main>
   </div>
 </div>
-<script src="/js/jquery-3.3.1.slim.min.js"></script>
-      <script>window.jQuery || document.write('<script src="/js/jquery-slim.min.js"><\/script>')</script><script src="/js/bootstrap.bundle.js"></script>
-        <script src="/js/feather.min.js"></script>
-        <script src="/js/Chart.min.js"></script>
-        <script src="/js/user-info.js"></script></body>
+<script src="../static/js/jquery-3.3.1.slim.min.js"></script>
+      <script>window.jQuery || document.write('<script src="../static/js/jquery-slim.min.js"><\/script>')</script><script src="../static/js/bootstrap.bundle.js"></script>
+        <script src="../static/js/feather.min.js"></script>
+        <script src="../static/js/Chart.min.js"></script>
+        <script src="../static/js/user-info.js"></script></body>
 </html>
