--- a/project/src/main/resources/static/css/design.css
+++ b/project/src/main/resources/static/css/design.css
@@ -171,4 +171,10 @@ body{
 .font-style-group .active{
     border: 1px solid red;
 }
+.drawImg{
+    position: absolute;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+}
 
