--- a/project/src/main/resources/static/css/main.css
+++ b/project/src/main/resources/static/css/main.css
@@ -2451,4 +2451,7 @@ h3.agileinfo_sign span {
 }
 .designArea{
   position: relative;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
 }
