--- a/project/src/main/resources/static/css/design.css
+++ b/project/src/main/resources/static/css/design.css
@@ -175,6 +175,27 @@ body{
     position: absolute;
     margin: 0;
     width: 100%;
+    background-repeat: no-repeat;
     height: 100%;
 }
+.painterArea{
+    width: 300px;
+    height: 300px;
+    overflow: hidden;
+    margin: 150px;
+    position: absolute;
+  }
+  .designArea{
+    position: relative;
+    width: 100%;
+    height: 100%;
+  
+  }
+  #can { position:absolute;top:0;left:0;border:1px solid black; }
+    #canval { position:absolute;top:0px;left:420px;width:1000px;height:400px; }
+    #save { position:absolute;top:420px;left:0px;width:200px;height:90px; }
+    #clear { position:absolute;top:420px;left:200px;width:200px;height:90px; }
+    #suggestions { width:1000px;height:90px;position:absolute;top:420px;left:420px;border:1px solid black;overflow-x:auto;display:flex; }
+    #suggestions img { cursor: pointer; }
+  
 
