--- a/project/src/main/resources/templates/design.html
+++ b/project/src/main/resources/templates/design.html
@@ -225,6 +225,7 @@
 
       </div>
     </div>
+    </div>
       <div class="col-md-4">
         <div class="prdtdetailrght_fromwp product-detail-right">
           <form id="productFrom" class="productFrom dropzones" name="productFrom" method="post" action="store_image.php"
@@ -359,6 +360,9 @@
                   </ul>
                 </div>
               </div>
+              <div class="text-btns textBtns whiteBtnNectar"> <a href="javascript:void(0);"
+                class="text-button btn btn-sm btn-success text-done" id="autoDraw">AutoDraw</a>
+            </div>
               <div class="artwork-container">
                 <div class="image_text_addinfo">
 
@@ -798,6 +802,11 @@
               </div>
 
             </div>
+            <div class="autoArea" style="display: none">
+                <canvas id="can" width="400" height="400"></canvas>
+                <input id="clear" type="button" value="Clear" id="clr" size="23" onclick="erase()">
+                <div id="suggestions"></div>
+            </div>
         </div>
         <div class="price_addtocart">
           <div class="price-right pull-right">
@@ -852,7 +861,7 @@
           $(this).removeClass('active');
         }
       })
-      $(document).on("click", ".text-done", function () {
+      $(document).on("click", "#text-done", function () {
         var isbold = "normal", isItalic = "font-style='normal'", isUnderline = "text-decoration='none'";
         if ($(".bold_txt").hasClass("active")) {
           isbold = "bold";
@@ -873,6 +882,7 @@
         var text = $("<div class='draggable textArea' >" + fontContent + "</div>");
         $(".painterArea").append(text);
         $(".textArea").css("font-weight", isbold);
+        $(".textArea").css("position", "absolute");
         $(".textArea").css("font-style", isItalic);
         $(".textArea").css("text-decoration", isUnderline);
         $(".textArea").css("font-size", fontSize + "px");
@@ -881,9 +891,12 @@
         //console.log("<div class='draggable' " + isbold + " " + isItalic + " " + isUnderline + " background-color=" + color + " font-size=" + fontSize + ">" + fontContent + "</div>")
 
         $(".draggable").draggable();
-        $(".draggable").resizable();
       })
-
+      $(document).on("click", "#autoDraw", function () {
+        $(".prdtdetailrght_cnt").hide();
+        $(".autoArea").show();
+      })
+      
       /*var isLiPresent = $('.iconRel_' + folder_name).find('ul li').length;
       if (parseInt(isLiPresent) > 0) {} else {
         dh_obj_print_product.getIndustriesIconForOccasion(folder_name);
@@ -891,6 +904,241 @@
         $('.iconRel_' + folder_name).find('ul').before('<span class="industry-selected">' + $(this).text() + '</span>');
       }*/
     </script>
+    <script type="text/javascript">
+      var API_ENDPOINT = 'https://inputtools.google.com/request?ime=handwriting&app=autodraw&dbg=1&cs=1&oe=UTF-8';
+      var SVG_ENDPOINT = 'https://storage.googleapis.com/artlab-public.appspot.com/stencils/selman/';
+      var canvas, ctx, pressed = false, pressedAt = 0, drawingInterval = null, intervalLastPosition = [-1,-1], shapes = [], currentShape = null,
+          prevX = 0,
+          currX = 0,
+          prevY = 0,
+          currY = 0,
+          highlightStartPoint = false;
+  
+      var dColor = "black", dColorStartingPoint = "black", dStroke = 8;
+  
+      function init() {
+          canvas = document.getElementById("can");
+          ctx = canvas.getContext("2d");
+          w = canvas.width;
+          h = canvas.height;
+  
+          canvas.addEventListener("mousemove", function (e) {
+              drawXY("move", e)
+          }, false);
+          canvas.addEventListener("mousedown", function (e) {
+              drawXY("down", e)
+          }, false);
+          canvas.addEventListener("mouseup", function (e) {
+              drawXY("up", e)
+          }, false);
+          canvas.addEventListener("mouseout", function (e) {
+              drawXY("out", e)
+          }, false);
+      }
+  
+      function prepareNewShape() {
+          currentShape = [
+              [], // x coordinates
+              [], // y coordinates
+              [] // times
+          ]
+      }
+  
+      function addPointToCurrentShape(x, y) {
+          currentShape[0].push(x);
+          currentShape[1].push(y);
+          currentShape[2].push(Date.now() - pressedAt);
+      }
+  
+      function draw() {
+          ctx.beginPath();
+          ctx.moveTo(prevX, prevY);
+          ctx.lineTo(currX, currY);
+          ctx.strokeStyle = dColor;
+          ctx.fillStyle = dColor;
+          ctx.lineCap = "round";
+          ctx.lineJoin = "round";
+          ctx.lineWidth = dStroke;
+          ctx.stroke();
+          ctx.closePath();
+      }
+  
+      function erase() {
+          ctx.clearRect(0, 0, w, h);
+          document.getElementById("canval").value = "";
+          shapes = [];
+      }
+  
+      function save() {
+          var dataURL = canvas.toDataURL();
+          document.getElementById("canval").value = dataURL;
+      }
+  
+      function drawingShape() {
+          if (intervalLastPosition[0] == prevX && intervalLastPosition[1] == prevY) {
+              // do nothing
+          } else {
+              addPointToCurrentShape(prevX, prevY);
+              intervalLastPosition = [prevX, prevY];
+          }
+      }
+  
+      function drawXY(res, e) {
+          if (res == "down") {
+              prevX = currX;
+              prevY = currY;
+              currX = e.clientX - canvas.offsetLeft;
+              currY = e.clientY - canvas.offsetTop;
+  
+              pressed = true;
+              pressedAt = Date.now();
+              highlightStartPoint = true;
+  
+              prepareNewShape();
+              drawingInterval = setInterval(drawingShape,9); // stores coordinates every 9ms
+  
+              if (highlightStartPoint) {
+                  ctx.beginPath();
+                  ctx.fillStyle = dColorStartingPoint;
+                  ctx.fillRect(currX, currY, 2, 2);
+                  ctx.closePath();
+                  highlightStartPoint = false;
+              }
+          }
+          if (res == "up" || (pressed && res == "out")) {
+              pressed = false;
+              commitCurrentShape();
+          }
+          if (res == "move") {
+              if (pressed) {
+                  prevX = currX;
+                  prevY = currY;
+                  currX = e.clientX - canvas.offsetLeft;
+                  currY = e.clientY - canvas.offsetTop;
+                  draw();
+              }
+          }
+      }
+  
+  
+      function extractDataFromApi(data) {
+          var regex = /SCORESINKS: (.*) Service_Recognize:/
+          return JSON.parse(data[1][0][3].debug_info.match(regex)[1])
+      }
+  
+  
+      function commitCurrentShape() {
+          clearInterval(drawingInterval);
+          shapes.push(currentShape);
+  
+  
+          var shapeDrawingTime = Date.now() - pressedAt;
+          //console.log("It tooks: "+shapeDrawingTime+"ms");
+  
+          $.ajax({
+              url: API_ENDPOINT,
+              type: 'POST',
+              contentType: 'application/json; charset=utf-8',
+              dataType: 'json',
+              data: JSON.stringify({
+                  input_type: 0,
+                  requests: [{
+                      language: 'autodraw',
+                      writing_guide: {
+                          "width": 400,
+                          "height": 400
+                      },
+                      ink: shapes
+                  }]
+              }),
+              success: function(data) {
+  
+                  if (data[0] !== 'SUCCESS') {
+                      throw new Error(data);
+                  }
+  
+                  var results = extractDataFromApi(data);
+  
+                  var parsedResults = results.map(function (result) {
+                      var escapedName = result[0].replace(/ /g, '-');
+  
+                      return {
+                          name: result[0],
+                          confidence: result[1],
+                          url: SVG_ENDPOINT + escapedName + '-01.svg',
+                          url_variant_1: SVG_ENDPOINT + escapedName + '-02.svg',
+                          url_variant_2: SVG_ENDPOINT + escapedName + '-03.svg'
+                      };
+                  });
+  
+                  displaySuggestions(parsedResults);
+              },
+              error: function(response) {
+                  console.log(response);
+              }
+          });
+      }
+  
+      function displaySuggestions(suggestions) {
+  
+          var $suggestions = $('#suggestions');
+          $suggestions.html('');
+  
+          //suggestions.sort(function(b,a) {return (a.confidence > b.confidence) ? 1 : ((b.confidence > a.confidence) ? -1 : 0);} );
+  
+          for (var i = 0; i < suggestions.length; i++) {
+              var suggestion = suggestions[i];
+              
+        
+               var $img = $('<img />')
+               .attr({'src':suggestion.url,
+               'width':80,
+               'height':80
+              } )
+              $img.css({
+                      border: '1px solid black'
+                  })
+                  /*
+                  $img.error(function() {
+                      $(this).remove();
+                  });*/
+
+
+              /*var $img = $('<img />');
+              $img.attr('src', suggestion.url)
+              $img.attr('width',80)
+              $img.attr('height',80)
+              $img.css({
+                      border: '1px solid black'
+                  })
+                  
+                  $img.error(function() {
+                      $(this).remove();
+                  });*/
+  
+              var $imgWrapper = $('<div />').attr('style', 'width:80px;height:80px;');
+              $imgWrapper.append($img);
+              $suggestions.append($imgWrapper);
+          }
+      }
+  
+      function pickSuggestion(src) {
+          erase();
+          var img = new Image();
+          img.onload = function() {
+              ctx.drawImage(img, 0, 0);
+          }
+          img.src = src;
+      }
+  
+      $(function(){
+          init();
+  
+          $(document).on('click', '#suggestions img', function() {
+              pickSuggestion($(this).attr('src'));
+          });
+      });
+  </script>
     <script src="../static/js/bootstrap.js"></script>
     <script src="../static/js/design/design.js"></script>
     <script src="../static/js/jscolor.js"></script>
