前后端交互

--- a/project/src/main/resources/templates/design.html
+++ b/project/src/main/resources/templates/design.html
@@ -4,18 +4,18 @@
 <head>
   <meta charset="utf-8">
   <title>Dashboard Template · Bootstrap</title>
-  <!--<script src="../static/js/jquery-min.js"></script>-->
+  <!--<script src="/js/jquery-min.js"></script>-->
   <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.bootcss.com/jquery-ui-bootstrap/0.5pre/css/custom-theme/jquery-ui-1.10.0.custom.css"
     rel="stylesheet">
-  <link href="../static/css/main.css" rel="stylesheet">
-  <link href="../static/css/design.css" rel="stylesheet">
-  <link href="../static/css/productEditor.css" rel="stylesheet">
+  <link href="/css/main.css" rel="stylesheet">
+  <link href="/css/design.css" rel="stylesheet">
+  <link href="/css/productEditor.css" rel="stylesheet">
 
-  <link href="../static/css/designMain.css" rel="stylesheet">
-  <link href="../static/css/designNotKnow.css" rel="stylesheet">
-  <link rel="stylesheet" href="../static/css/line-icons.css">
-  <link href="../static/css/font-awesome.css" rel="stylesheet">
+  <link href="/css/designMain.css" rel="stylesheet">
+  <link href="/css/designNotKnow.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/line-icons.css">
+  <link href="/css/font-awesome.css" rel="stylesheet">
 </head>
 
 <body>
@@ -850,9 +850,9 @@
       $('.iconRel_' + folder_name).find('ul').before('<span class="industry-selected">' + $(this).text() + '</span>');
     }*/
   </script>
-  <script src="../static/js/bootstrap.js"></script>
-  <script src="../static/js/design/design.js"></script>
-  <script src="../static/js/jscolor.js"></script>
+  <script src="/js/bootstrap.js"></script>
+  <script src="/js/design/design.js"></script>
+  <script src="/js/jscolor.js"></script>
 </body>
 
 </html>
