--- a/project/src/main/resources/templates/information.html
+++ b/project/src/main/resources/templates/information.html
@@ -1,28 +1,28 @@
-<html>
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
-    <title>Bootstrap 实例</title>
+    <title>My Information</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../static/css/navigation.css">
+    <link rel="stylesheet" href="/css/navigation.css">
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
-    <script src="../static/js/jquery-3.3.1.slim.min.js"></script>
-    <script src="../static/js/jquery-min.js"></script>
-    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../static/css/line-icons.css">
-    <link rel="stylesheet" href="../static/css/owl.carousel.css">
-    <link rel="stylesheet" href="../static/css/owl.theme.css">
-    <link rel="stylesheet" href="../static/css/nivo-lightbox.css">
-    <link rel="stylesheet" href="../static/css/magnific-popup.css">
-    <link rel="stylesheet" href="../static/css/animate.css">
-    <link rel="stylesheet" href="../static/css/color-switcher.css">
-    <link rel="stylesheet" href="../static/css/menu_sideslide.css">
-    <link rel="stylesheet" href="../static/css/main.css">
-    <link rel="stylesheet" href="../static/css/responsive.css">
-    <link rel="stylesheet" href="../static/css/font-awesome.css">
-    <script>window.jQuery || document.write('<script src="../static/js/jquery-slim.min.js"><\/script>')</script>
-    <script src="../static/js/bootstrap.bundle.js"></script>
+    <script src="/js/jquery-3.3.1.js"></script>
+    <script src="/js/jquery-min.js"></script>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/line-icons.css">
+    <link rel="stylesheet" href="/css/owl.carousel.css">
+    <link rel="stylesheet" href="/css/owl.theme.css">
+    <link rel="stylesheet" href="/css/nivo-lightbox.css">
+    <link rel="stylesheet" href="/css/magnific-popup.css">
+    <link rel="stylesheet" href="/css/animate.css">
+    <link rel="stylesheet" href="/css/color-switcher.css">
+    <link rel="stylesheet" href="/css/menu_sideslide.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="/css/font-awesome.css">
+    <script>window.jQuery || document.write('<script src="/js/jquery-min.js"><\/script>')</script>
+    <script src="/js/bootstrap.bundle.js"></script>
     <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
     <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
@@ -37,8 +37,8 @@
             <div class="col-md-7">
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown data-hover">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-hover="dropdown"
-                            data-toggle="dropdown" id="dropdownMenu1">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop0" data-hover="dropdown"
+                            data-toggle="dropdown" >
                             Products
                         </a>
                         <div class="dropdown-menu hover" aria-labelledby="dropdownMenu1">
@@ -51,7 +51,7 @@
                         </div>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop1" data-toggle="dropdown">
                             Designs
                         </a>
                         <div class="dropdown-menu">
@@ -61,7 +61,7 @@
                         </div>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop2" data-toggle="dropdown">
                             Service
                         </a>
                         <div class="dropdown-menu">
@@ -74,7 +74,7 @@
             </div>
             <div class="col-md-3">
                 <ul class="nav nav-item dropdown navbar-right">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbardrop3" data-toggle="dropdown">
                         PersonalCenter
                     </a>
                     <div class="dropdown-menu">
@@ -173,23 +173,20 @@
                     <h3>Basics</h3>
                         <div class="container">
                             <div class="col-xs-2">
-                                <div class="margin">
+                                <div class="form-group">
                                     <li>
-                                        <img src="../static/images/head_picture/head_picture-01.jpg" width="75"
+                                        <img src="/images/head_picture/head_picture-01.jpg" width="75"
                                             height="75" border-ridus="50%">
-                                        用户名：Ameame
-
+                                        <label for="userId">userId:</label>
+                                        <input type="text"  id="userId" readonly    >
                                     </li>
+                                </div>
+                                <div>
                                 </div>
                             </br>
                                 <div class="form-group">
-                                    <label for="petname">Petname</label>
-                                    <input type="text" class="form-control" id="petname"
-                                        placeholder="Enter Your Petname">
-                                </div>
-                                <div class="form-group">
-                                    <label for="pws">Password:</label>
-                                    <input type="password" class="form-control" id="pwd"
+                                    <label for="password">Password:</label>
+                                    <input type="password" class="form-control" id="password"
                                         placeholder="Enter Your Password">
                                 </div>
                                 <div class="form-group">
@@ -201,14 +198,9 @@
                         <h3>Detailes</h3>
                         <div class="container">
                             <div class="form-group">
-                                <label for="First Name">First Name:</label>
-                                <input type="text" class="form-control" id="first name"
-                                    placeholder="Enter Your First Name">
-                            </div>
-                            <div class="form-group">
-                                <label for="Last Name">Last Name:</label>
-                                <input type="text" class="form-control" id="last name"
-                                    placeholder="Enter Your Last Name">
+                                <label for="nickname">Nickname:</label>
+                                <input type="text" class="form-control" id="nickname"
+                                    placeholder="Enter Your Nickname">
                             </div>
                             <div class="form-group">
                                 <div class="btn-group">
@@ -223,8 +215,8 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="Phone Number">Phone Number:</label>
-                                <input type="text" class="form-control" id="phone"
+                                <label for="phoneNumber">Phone Number:</label>
+                                <input type="text" class="form-control" id="phoneNumber"
                                     placeholder="Enter Your Phone Number">
                             </div>
                             <div class="form-group">
@@ -233,8 +225,8 @@
                             </div>
                         </div>
 
-                        <button class="button">Save</button>
-                        <button type="reset" class="button">Reset</button>
+                        <button id="updateAccount" type="button" class="button">Save</button>
+                        <button id="accountReset" type="button" class="button">Reset</button>
                 </div>
             </div>
 
@@ -246,32 +238,17 @@
                     <div class="side-bar-card flag clearfix">
                         <h3>Publishing</h3>
                         <div class="col-xs-8">
-                            <input type="text" class="form-control" placeholder="Write Down Your Dynamic">
+                            <input id="details" type="text" class="form-control" placeholder="Write Down Your Dynamic">
                         </div>
                         <div class="col-xs-4">
-                            <button type="submit" class="right">Submit</button>
-                            <button type="reset">Reset</button>
+                            <button id="insertComments" type="button" class="right">Submit</button>
+                            <button id="commentReset" type="button">Reset</button>
                         </div>
                     </div>
                     <div class="side-bar-card">
                         <div class="card-title">The Past</div>
                         <div class="card-body">
-                            <div class="list">
-                                <div class="item">
-                                    <div class="time">2019/9/6 21:09</div>
-                                    <a class="title">Sed老师教你打星际之新版本PVT怎么打</a>
-                                    <div class="desc">15k阅读 · 1k评论</div>
-                                </div>
-                                <div class="item">
-                                    <div class="time">2019/9/6 21:09</div>
-                                    <a class="title">Sed老师教你打星际之新版本PVT怎么打</a>
-                                    <div class="desc">15k阅读 · 1k评论</div>
-                                </div>
-                                <div class="item">
-                                    <div class="time">2019/9/6 21:09</div>
-                                    <a class="title">Sed老师教你打星际之新版本PVT怎么打</a>
-                                    <div class="desc">15k阅读 · 1k评论</div>
-                                </div>
+                            <div id="commentList" class="list">
                             </div>
                         </div>
                     </div>
@@ -337,12 +314,12 @@
                         <div class="widget">
                             <h3 class="block-title">Instagram</h3>
                             <ul class="instagram-footer">
-                                <li><a href="#"><img src="../static/img/instagram/insta1.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="../static/img/instagram/insta2.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="../static/img/instagram/insta3.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="../static/img/instagram/insta4.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="../static/img/instagram/insta5.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="../static/img/instagram/insta6.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="/img/instagram/insta1.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="/img/instagram/insta2.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="/img/instagram/insta3.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="/img/instagram/insta4.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="/img/instagram/insta5.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="/img/instagram/insta6.jpg" alt=""></a></li>
                             </ul>
                         </div>
                     </div>
@@ -350,12 +327,133 @@
             </div>
         </section>
     </div>
-    <script src="../static/js/jquery-3.3.1.slim.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../static/js/jquery-slim.min.js"><\/script>')</script>
-    <script src="../static/js/bootstrap.bundle.js"></script>
-    <script src="../static/js/feather.min.js"></script>
-    <script src="../static/js/Chart.min.js"></script>
-    <script src="../static/js/user-info.js"></script>
+    <script src="/js/jquery-3.3.1.js"></script>
+    <script>window.jQuery || document.write('<script src="/js/jquery-min.js"><\/script>')</script>
+    <script src="/js/bootstrap.bundle.js"></script>
+    <script src="/js/feather.min.js"></script>
+    <script src="/js/Chart.min.js"></script>
+    <script src="/js/user-info.js"></script>
+
+    <script>
+        $(window).load(function () {
+            var user = 190;
+            var pass = "111";
+            $.ajax({
+                url:"/log",
+                type:"POST",
+                data:{"userId":user,"password":pass},
+                dataType : "json",
+                success:function (data) {
+                    if(data == 0){
+                        alert("密码错误，请重新输入")
+                    }
+                    else{
+                        alert("欢迎" + data)
+                    }
+                },
+                error:function (request) {
+                    alert('登陆失败')
+                }
+            })
+            $.ajax({
+                url:"/getSession",
+                type:"GET",
+                success:function (result) {
+                    alert(result)
+                    $("#userId").val(result)
+                },
+                error:function () {
+
+                }
+            })
+            $.ajax({
+                url:"/getCommentOfCurrentUser",
+                type:"GET",
+                success:function (data) {
+                    var html = "";
+                    var temp = data.commentsList;
+                    for (var i = 0;i < data.commentsList.length;i++){
+                        var time = temp[i].time;
+                        var details = temp[i].details;
+                        html += "<div class=\"item\"><div class=\"time\">" + time + "</div>";
+                        html += "<a class=\"title\">" + details + "</a></div>";
+                        $("#commentList").html(html);
+                        alert(time + details);
+                    }
+                },
+                error:function () {
+
+                }
+            })
+
+        })
+    </script>
+
+    <script>
+        //修改信息
+        $('#updateAccount').click(function () {
+            var record = {
+                password:$("#password").val(),
+                nickname:$('#nickname').val(),
+                email:$('#email').val(),
+                phoneNum:$('#phoneNumber').val(),
+                //headPicture:"/images/head_picture/head_picture-01.jpg",
+                city:$('#city').val(),
+            }
+            $.ajax({
+                url : "/updateAccount",
+                type : "POST",
+                dataType : "json",
+                contentType : "application/json",
+                data : JSON.stringify(record),
+                async : true,
+                success: function (data) {
+                    console.log(data);
+                },
+                error: function (result) {
+                    alert('添加失败');
+                }
+            })
+        });
+    </script>
+
+    <script>
+        //重设
+        $("#accountReset").click(function () {
+            $("#userId").val("");
+            $("#password").val("");
+            $("#nickname").val("");
+            $("#email").val("");
+            $("#phoneNumber").val("");
+            $("#city").val("");
+        })
+    </script>
+
+    <script>
+        //发表评论
+        $("#insertComments").click(function () {
+            var details = $("#details").val();
+            $.ajax({
+                url : "/insertComments",
+                type : "POST",
+                dataType : "json",
+                data : {"details":details},
+                success: function (data) {
+                    console.log(data);
+                },
+                error: function (result) {
+                    alert('添加失败');
+                }
+            })
+        })
+    </script>
+
+    <script>
+        //清空
+        $("#commentReset").click(function () {
+            $("#details").val("");
+        })
+    </script>
 </body>
 
 </html>
